[package]
name = "highrock_engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = { version = "27.0", features = ["webgl", "webgpu", "vulkan", "dx12"] }
winit = "0.30"
log = "0.4"
env_logger = "0.11"

#UI lib
egui = "0.33"
egui-wgpu = "0.33"
egui-winit = { version = "0.33", default-features = false }

glam = { version = "0.32", features = ["bytemuck"] }
bytemuck = { version = "1.25", features = ["derive"] }
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
] }
kira = { version = "0.9", default-features = false, features = [
    "cpal",
    "ogg",
    "wav",
] }
tobj = "4.0"
gltf = { version = "1", features = ["utils"] }
instant = { version = "0.1", features = ["wasm-bindgen"] }

#Native only
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.4"
tokio = { version = "1.50", features = ["rt", "rt-multi-thread", "macros"] }

#Wasm only
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
    "Performance",
    "Headers",
    "Request",
    "RequestInit",
    "Response",
    "Location",
    # Audio API
    "AudioContext",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioDestinationNode",
    "AudioNode",
    "AudioParam",
    "GainNode",
] }
console_error_panic_hook = "0.1"
console_log = "1.0"
getrandom = { version = "0.3", features = ["wasm_js"] }
